# ekzip

./: ekzip.py  out2.raw  pyproject.toml  setup.cfg  simrad_compressed_parser.py  simrad_parsers.py  test.py  wavelets.py
src/: ekzip.py  simrad_compressed_parser.py  wavelets.py
testing/: test.py
