[project]
name = "ekzip"
version = "0.1.0"
description = "Compression utility for Simrad echosounder data (RAW files)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ektools>=0.1.1",
    "matplotlib>=3.10.7",
    "pywavelets>=1.9.0",
]

[tool.uv.sources]
ektools = { path = "../ektools" }

[project.scripts]
ekzip = "ekzip:main"
ekunzip = "ekzip:main"
